@@ -1,8 +1,10 @@
 $Id$
 
 0.9.9:
-	- improved call-out debugging
+	- improved call-out debugging in Modem.pm
 	- corrected pet3 handling, added the 'proto' option to PCs
+	- allow whitespace to preceed comments in sendpage.cf
+	- fixed "dialout" typo in Modem.pm
 
 0.9.8: (30Jan2001)
 	- further updates to Device::SerialPort and associated documentation
